--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "check-package": "npm run check-package:name && npm run check-package:version",
     "check-package:name": "test $(jq -r .name package.json) = $(jq -r .name package-lock.json)",
     "check-package:version": "test $(jq -r .version package.json) = $(jq -r .version package-lock.json)",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "pbjs": "pbjs"
   },
   "contributors": [
     {
